Add services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c8cfb0667e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,6 +72,34 @@
                         <li><span>2015</span><br>BAC math A</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--------------- services ------------------>
+
+<div id="services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa-solid fa-code"></i>
+                <h2>APIs Development</h2>
+                <p>Some text here</p>
+                <a href="#">learn more</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-robot"></i>
+                <h2>Automation tools</h2>
+                <p>Some text here</p>
+                <a href="#">learn more</a>
+            </div>
+            <div>
+                <i class="fa-brands fa-python"></i>
+                <h2>Write beautiful python</h2>
+                <p>Some text here</p>
+                <a href="#">learn more</a>
             </div>
         </div>
     </div>
